--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -82,6 +82,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    padding-block: 16px;
 
     gap: 16px;
 }
