--- a/resources/css/news.css
+++ b/resources/css/news.css
@@ -160,7 +160,7 @@
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 8px;
-    padding-inline: 24px;
+    /*padding-inline: 16px;*/
 }
 
 .post-author-wrapper {
@@ -516,9 +516,9 @@
     align-items: center;
     justify-content: space-between;
     padding: 24px;
-    background-color: rgba(0, 0, 0, 0.64);
-    backdrop-filter: blur(16px);
-    -webkit-backdrop-filter: blur(16px);
+    /*background-color: rgba(0, 0, 0, 0.64);*/
+    /*backdrop-filter: blur(16px);*/
+    /*-webkit-backdrop-filter: blur(16px);*/
 }
 
 .slider-image-wrapper {
